frontend/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&family=Montserrat+Alternates:wght@400;700&display=swap');

:root {
  --text: #6f6f70;
  --text-h: #08060d;
  --bg: #ffffff;
  --accent:#F0BA7E;
  --border: #e5e4e7;

 font-family: 'Inter', sans-serif;

  color: var(--text);
  background: var(--bg);
}

body {
  margin: 0;
  background-color: var(--bg);
}

.products-page {
  padding: 2rem;
}

.products-grid {
  display: grid;
  grid-template-columns: repeat(4, minmax(220px, 280px));
  
  column-gap: 2rem;  
  row-gap: 3rem;     
  
  justify-content: center;
  align-items: stretch;
}

.product-card {
  border: 1px solid #e5e0dc; 
  border-radius: 12px;
  padding: 1rem;
  background-color: rgb(245, 239, 233);

  display: flex;
  flex-direction: column;
  height: 100%;
}

.product-card:hover {
  transform: translateY(-6px);
  box-shadow: 0 12px 30px rgba(0, 0, 0, 0.15);
}

.product-card_image {
  width: 100%;
  height: 260px;
  object-fit: cover;
  display: block;
  margin-bottom: 0.75rem;
}

.product-card_title {
  font-size: 1.4rem;
  font-weight: 600;
  margin: 0.8rem 0 0.4rem;
  color: var(--text-h);
}

.product-card_description {
  font-size: 1rem;
  color: var(--text);
  line-height: 1.4;
  margin-bottom: 0.5rem;
  min-height: 45px;
}

.product-card_price {
  font-size: 1.3rem;
  font-weight: bold;
  color: var(--text-h);
  margin-top: auto;
  margin-bottom: 0.4rem;
}

.product-card,
.product-card a,
a .product-card,
a .product-card_title,
a .product-card_description,
a .product-card_price {
  color: inherit;
  text-decoration: none;
}

.mobile-only {
  display: none;
}
.desktop-only {
  display: flex;
  gap: 1.5rem;
}

@media (max-width: 768px) {
  .mobile-only {
    display: flex;
  }
  .desktop-only {
    display: none;
  }
}

.nav-category {
  font-family: Inter;
  font-weight: 400;
  font-size: 36px;
  cursor: pointer;
  font-size: 0.9rem;
  letter-spacing: 0.05em;
}

.nav-category:hover {
  text-decoration: underline;
}

.navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 1rem 2rem;
  border-bottom: 1px solid #ddd;
  position: sticky;
  top: 0;
  background: #fff;
  z-index: 200;
}

.navbar-logo {
  flex: 1;
  text-align: center;
  font-family: "Montserrat Alternates", sans-serif;
  font-size: 40px;
  font-weight: 400;
  font-style: normal;
  line-height: 100%;
  letter-spacing: 0%;
  white-space: nowrap;
}
.srcComponent {
  position: relative;
  width: 100%;
  max-width: 400px;
  margin-right: 150px;
}
.srcBar {
  background-color: #ebe7ee;
  border: none;
  padding: 10px 40px 10px 12px;
  border-radius: 16px;
  width: 200px;
}
.searchIcon {
  position: absolute;
  right: 12px;
  top: 50%;
  transform: translateY(-50%);
  color: gray;
  margin-right: 150px;
  pointer-events: none;
}

.cartBtn {
border: none;
  position: relative;
  background: transparent;
  border: none;
  font-size: 22px;
  cursor: pointer;
  margin-right: 20px;
}
.cartBtn:hover {
background-color: #f2f1f5;
border-radius: 5px;
}

.navbar-left {
  flex: 1;
}

.navbar-right {
  flex: 1;
  display: flex;
  justify-content: flex-end;
  align-items: center;
  gap: 1rem;
}

.hamburger-btn {
  background: none;
  border: none;
  cursor: pointer;
  font-size: 1.5rem;
}

.hamburger-overlay {
  position: fixed;
  inset: 0;
  top: 64px;
  background: rgba(0, 0, 0, 0.3);
  z-index: 99;
}

.hamburger-drawer {
  position: fixed;
  top: 64px;
  left: 0;
  width: 250px;
  height: calc(100vh - 64px);
  background: #fff;
  border-right: 1px solid #ddd;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-top: 1rem;
  z-index: 100;
}

.menu-item {
  padding: 1rem 1.5rem;
  cursor: pointer;
  font-weight: bold;
  font-size: 1.2rem;
  letter-spacing: 0.1em;
  border-bottom: 1px solid #f0f0f0;
}
.drawer-footer {
  padding: 1rem 1.5rem;
  color: #aaa;
  font-size: 0.75rem;
  border-top: 1px solid #f0f0f0;
}

.drawer-footer p {
  margin: 0.2rem 0;
}

.menu-item:hover {
  background: #f9f9f9;
}
.cart-wrapper {
  border-radius: 4px;
  transition: background 0.2s;
}

.cart-active {
  background: #474645;
  color: #fff;
}

/* CART */
.shopping-cart-page {
  padding: 2rem;
  min-height: 70vh;
}

.cart-items-list {
  max-width: 750px;
  margin: 0;

  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.cart-item-row {
  border-bottom: 2px solid #cfcfcf;
  padding: 2rem 0;

  display: flex;
  justify-content: flex-start;
  gap: 1rem;

  align-items: center;
}

.cart-item-row .product-card {
  width: 220px;
  max-width: 220px; /* samma som grid på startsidan */
  flex-shrink: 0;
}

/* När Cart är tom*/
.cart-empty-state {
  min-height: 60vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
}

.cart-empty-state p {
  margin: 0.3rem 0;
}

.shopNowBtn {
  margin-top: 1.5rem;
  background: #383837;
  border-radius: 10px;
  padding: 25px;
  color: white;
  border: none;
  font-family: "Montserrat Alternates", sans-serif;

  cursor: pointer;
}


.shopNowBtn:hover{
background-color: #28272b;
}

.shop-now-btn{
   margin-top: 1.5rem;
  background: #383837;
  border-radius: 10px;
  padding: 18px;
  color: white;
  border: none;
  font-family: "Montserrat Alternates", sans-serif;

  cursor: pointer;
}
.checkout-btn {
  background-color: #d9943f;
  color: white;
  border: none;
  padding: 14px 40px;
  border-radius: 20px;
  font-size: 16px;
  font-weight: 500;
  cursor: pointer;
  transition: all 0.3s ease;
}

.checkout-btn:hover {
  background-color: #c78335;
  transform: scale(1.05);
}

.progress-bar {
  width: 200px;
  height: 6px;
  background: #e0e0e0;
  border-radius: 10px;
  margin-top: 1rem;
  overflow: hidden;
}

.progress-fill {
  height: 100%;
  background: #474645;
  border-radius: 10px;
  animation: fill 2s ease forwards;
}

@keyframes fill {
  from { width: 0%; }
  to { width: 100%; }
}

a {
  text-decoration: none;
  color: inherit;
}

a:visited {
  color: inherit;
}

a:hover {
  color: inherit;
}

